--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css"/>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <title>Blockade</title>
+    <link rel="icon" type="image/png" href="/img/social/chaplinicon.png"/>
 </head>
 <body>
 
