--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <div class="container center-content space-between" style="height: 90vh; padding: 20vh" id="social">
             <ul class="bottom smaller-img">
                 <li class="vr" style="padding-right: 2vw">
-                    <a href="https://github.com/NgyAnthony">
+                    <a href="https://github.com/NgyAnthony" target="_blank">
                         <img src="img/social/github.png" />
                     </a>
                 </li>
                 <li style="padding-left: 2vw">
-                    <a href="http://lyceecharliechaplin.com">
+                    <a href="http://www.lyceecharliechaplin.com/" target="_blank">
                         <img src="img/social/chaplin.png"/>
                     </a>
                 </li>
