Responsive social list

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             </ul>
         </div>
 
-        <div class="container center-content space-between" style="height: 90vh; padding: 20vh" id="social">
-            <ul class="bottom smaller-img">
-                <li class="vr" style="padding-right: 2vw">
+        <div class="container center-content" style="height: 90vh; padding: 20vh;" id="social">
+            <ul class="bottom smaller-img" style="white-space: nowrap;">
+                <li class="vr" style="padding-right: 2vw;">
                     <a href="https://github.com/NgyAnthony" target="_blank">
                         <img src="img/social/github.png" />
                     </a>
                 </li>
-                <li style="padding-left: 2vw">
+                <li style="padding-left: 2vw;">
                     <a href="http://www.lyceecharliechaplin.com/" target="_blank">
                         <img src="img/social/chaplin.png"/>
                     </a>
